@@ -5,6 +5,7 @@ v0.09
 	* FIX : draw unconnected trackpoints
 	* ADD : multiple remove
 	* ADD : save last current directory
+	* ADD : draw landuse=forest area (by Raphael Studer)
 
 v0.08
 	* FIX : work with 0.5 API
